--- a/src/css/style.css
+++ b/src/css/style.css
@@ -21,3 +21,5 @@
 /* Pages */
 @import "pages/about.css";
 @import "pages/programme.css";
+@import "pages/artistes.css";
+@import "pages/artiste.css";
