--- a/src/css/pages/artiste.css
+++ b/src/css/pages/artiste.css
@@ -1,18 +1,17 @@
 /* ===== HERO IMAGE ===== */
 
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
+.artist-page {
+  background-color: #534F4B;
+  color: #F8EEE2;
+  min-height: 100vh;
+  padding-bottom: 52px;
+}
+.artist-back {
+  display: flex;
+  justify-content: center;
+  margin-top: 28px; 
 }
 
-main {
-  background: #534F4B;
-  color: #F8EEE2;
-  min-height: 100%; 
-  display: flex;
-  flex-direction: column;
-}
 
 
 
@@ -180,7 +179,7 @@ main {
   display: flex;
   justify-content: center;
   margin-top: 28px;
-  margin-bottom: 52px;
+  
 }
 
 .artist-back__btn {
