add css and java for page scenes

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -23,3 +23,5 @@
 @import "pages/programme.css";
 @import "pages/artistes.css";
 @import "pages/artiste.css";
+@import "pages/contact.css";
+@import "pages/scenes.css";
